fixed spacing for contact icons

--- a/css/style.css
+++ b/css/style.css
@@ -9396,6 +9396,15 @@ textarea.form-control {
 .contact-section .contact-info p a {
   color: #1a1a1a; }
 
+#contact-item {
+  /* display: flex !important; */
+  /* background: orange; */
+  display: block;
+  padding-left: 170px;
+  /* justify-content: space-around; */
+
+}  
+
 .contact-section .box {
   width: 100%;
   display: block;
